[gd_scene load_steps=37 format=2]

[ext_resource path="res://images/bg/black.png" type="Texture" id=1]
[ext_resource path="res://fonts/OpenDyslexic-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://images/Characters/AnGel1.jpg" type="Texture" id=3]
[ext_resource path="res://images/Characters/Angel4.jpg" type="Texture" id=4]
[ext_resource path="res://images/Characters/AnGel3.jpg" type="Texture" id=5]
[ext_resource path="res://images/Characters/AnGel2.jpg" type="Texture" id=6]
[ext_resource path="res://images/Characters/AnGel5.jpg" type="Texture" id=7]
[ext_resource path="res://images/Characters/wingedmap.png" type="Texture" id=8]
[ext_resource path="res://scenes/AnGel.gd" type="Script" id=9]
[ext_resource path="res://scenes/storyScene.gd" type="Script" id=10]
[ext_resource path="res://Audio/Music/Scary atmosphere 1.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/SFX/Boing sound 1.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/SFX/Switch sounds 20.wav" type="AudioStream" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 1 )
VScrollBar/styles/scroll_focus = null

[sub_resource type="VisualShaderNodeScalarOp" id=4]
default_input_values = [ 0, 1.0, 1, 0.0 ]
operator = 2

[sub_resource type="VisualShaderNodeScalarFunc" id=5]
function = 12

[sub_resource type="VisualShaderNodeScalarOp" id=6]
default_input_values = [ 0, 0.0, 1, 0.7 ]

[sub_resource type="VisualShaderNodeTexture" id=7]
output_port_for_preview = 0
source = 2

[sub_resource type="VisualShaderNodeScalarOp" id=8]
operator = 7

[sub_resource type="VisualShaderNodeInput" id=9]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorDecompose" id=10]

[sub_resource type="VisualShaderNodeInput" id=11]
input_name = "time"

[sub_resource type="VisualShaderNodeScalarOp" id=12]

[sub_resource type="VisualShaderNodeScalarFunc" id=13]
function = 0

[sub_resource type="VisualShaderNodeScalarOp" id=14]
output_port_for_preview = 0
default_input_values = [ 0, 0.0, 1, 0.8 ]
operator = 6

[sub_resource type="VisualShader" id=15]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 _tex_read = texture( TEXTURE , UV.xy );
		n_out2p0 = _tex_read.rgb;
		n_out2p1 = _tex_read.a;
	}

// Input:4
	vec3 n_out4p0;
	n_out4p0 = vec3(UV,0.0);

// VectorDecompose:5
	float n_out5p0;
	float n_out5p1;
	float n_out5p2;
	n_out5p0 = n_out4p0.x;
	n_out5p1 = n_out4p0.y;
	n_out5p2 = n_out4p0.z;

// Input:6
	float n_out6p0;
	n_out6p0 = TIME;

// ScalarOp:7
	float n_out7p0;
	n_out7p0 = n_out5p1 + n_out6p0;

// ScalarFunc:8
	float n_out8p0;
	n_out8p0 = sin(n_out7p0);

// ScalarFunc:11
	float n_out11p0;
	n_out11p0 = abs(n_out8p0);

// ScalarOp:12
	float n_in12p1 = 0.70000;
	float n_out12p0;
	n_out12p0 = n_out11p0 + n_in12p1;

// ScalarOp:9
	float n_in9p1 = 0.80000;
	float n_out9p0;
	n_out9p0 = max( n_out12p0 , n_in9p1 );

// ScalarOp:10
	float n_in10p0 = 1.00000;
	float n_out10p0;
	n_out10p0 = n_in10p0 * n_out9p0;

// ScalarOp:3
	float n_out3p0;
	n_out3p0 = min( n_out2p1 , n_out10p0 );

// Output:0
	COLOR.rgb = n_out2p0;
	COLOR.a = n_out3p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 0, 53.5 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1020, 60 )
nodes/fragment/2/node = SubResource( 7 )
nodes/fragment/2/position = Vector2( 60, 40 )
nodes/fragment/3/node = SubResource( 8 )
nodes/fragment/3/position = Vector2( 840, 140 )
nodes/fragment/4/node = SubResource( 9 )
nodes/fragment/4/position = Vector2( 40, 320 )
nodes/fragment/5/node = SubResource( 10 )
nodes/fragment/5/position = Vector2( 220, 320 )
nodes/fragment/6/node = SubResource( 11 )
nodes/fragment/6/position = Vector2( 240, 440 )
nodes/fragment/7/node = SubResource( 12 )
nodes/fragment/7/position = Vector2( 440, 360 )
nodes/fragment/8/node = SubResource( 13 )
nodes/fragment/8/position = Vector2( 620, 380 )
nodes/fragment/9/node = SubResource( 14 )
nodes/fragment/9/position = Vector2( 880, 380 )
nodes/fragment/10/node = SubResource( 4 )
nodes/fragment/10/position = Vector2( 1058, 342 )
nodes/fragment/11/node = SubResource( 5 )
nodes/fragment/11/position = Vector2( 771, 293 )
nodes/fragment/12/node = SubResource( 6 )
nodes/fragment/12/position = Vector2( 620, 545.5 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 2, 1, 3, 0, 3, 0, 0, 1, 4, 0, 5, 0, 5, 1, 7, 0, 6, 0, 7, 1, 7, 0, 8, 0, 9, 0, 10, 1, 10, 0, 3, 1, 8, 0, 11, 0, 11, 0, 12, 0, 12, 0, 9, 0 )
nodes/light/0/position = Vector2( 600, 120 )

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.780392, 1, 0.847059, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.376471, 0.392157, 1, 1 )
border_blend = true
shadow_color = Color( 0.745098, 1, 0.980392, 0.392157 )
shadow_size = 4
anti_aliasing_size = 2

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.745098, 1, 0.980392, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.376471, 0.392157, 1, 1 )
border_blend = true
shadow_color = Color( 0.745098, 1, 0.980392, 1 )
shadow_size = 4
anti_aliasing_size = 2

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.3666, 0.47, 0.39762, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.376471, 0.392157, 1, 1 )
border_blend = true
shadow_color = Color( 0.745098, 1, 0.980392, 0.392157 )
shadow_size = 4
anti_aliasing_size = 2

[sub_resource type="Theme" id=20]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.14, 0.14, 0.14, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 17 )
Button/styles/focus = SubResource( 18 )
Button/styles/hover = SubResource( 18 )
Button/styles/normal = SubResource( 17 )
Button/styles/pressed = SubResource( 19 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.780392, 1, 0.847059, 0.643137 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id=22]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.15, 0.15, 0.15, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=23]
audio_stream = ExtResource( 13 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
exported_story_location = "res://ink/main.ink.json"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnGelContainer" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 510.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnGel" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer/AnGelContainer"]
material = SubResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
frames = [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ) ]

[node name="TextureRect2" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer/AnGelContainer"]
modulate = Color( 1, 1, 1, 0.556863 )
material = SubResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -13.0
margin_bottom = 28.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryChoicesContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 400.0
size_flags_horizontal = 3
theme = SubResource( 20 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
show_behind_parent = true
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 200 )
custom_styles/panel = SubResource( 21 )

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 192.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="StoryTextBox" type="RichTextLabel" parent="Control/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 992.0
margin_bottom = 168.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "This is my test text"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 22 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
pitch_scale = 0.5
autoplay = true
bus = "Peaceful Music"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
pitch_scale = 0.4
bus = "Boing"

[node name="ClickFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 23 )
volume_db = -15.0
[connection signal="prompt_pressed" from="." to="." method="when_prompt_pressed"]
[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/StoryChoicesContainer" to="." method="_on_StoryChoicesContainer_gui_input"]
